  find_paragraph()
	- Fix problem where a search for the next paragraph would skip
	  over certain cases of one-line paragraphs. (DLR)
  do_justify()
	- Instead of breaking a line at a space and readding the space
	  afterwards, just break the line after the space, as it's more
	  efficient. (DLR)
- utils.c:
  regexec_safe()
	- Rename to safe_regexec() for consistency. (DLR)
- winio.c:
  help_line_len()
	- Make the text display more flexible, and closer to what nano
	  1.2.x does. (DLR)

GNU nano 1.3.6 - 2005.03.20
- General:
	- More int -> bool conversions. (DLR and David Benbennick)
	- Overhaul the cutting and uncutting routines to use the
	  partitioning code, as it greatly simplifies how they work.
	  New functions move_to_filestruct(), copy_from_filestruct(),
	  cut_line(), cut_marked(), and cut_to_eol(); changes to
	  add_to_cutbuffer(), do_cut_text(), do_uncut_text(), etc.;
	  removal of functions get_cutbottom(), add_to_cutbuffer(), and
	  cut_marked_segment(). (DLR)
	- Overhaul the justify-related routines to back up and restore
	  unjustified text to use the partitioning code, as it greatly
	  simplifies how they work, and to store such text in its own
	  buffer rather than the cutbuffer.  Changes to backup_lines(),
	  do_justify(), etc. (DLR)
	- Overhaul the multibuffer routines to increase efficiency, most
	  importantly making them use a doubly linked list for the open
	  files so that switching between them is no longer O(N), and
	  only including free_openfilestruct() when --enable-debug is
	  used.  Also use some of the same efficiency tweaks when
	  dealing with filestruct nodes.  New function
	  open_prevnext_file(); changes to make_new_opennode(),
	  splice_opennode(), unlink_opennode(), delete_opennode(),
	  free_openfilestruct(), add_open_file(), load_open_file(),
	  close_open_file(), shortcut_init(), die(), make_new_node(),
	  copy_node(), splice_node(), delete_node(), and
	  free_filestruct(); removal of open_prevfile() and